--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,80 @@
-# name: Deploy to ECS
+name: Deploy Next.js site to Pages
 
-# on:
-#   push:
-#     branches:
-#       - main
-#   workflow_dispatch:
+on:
+  # Runs on pushes targeting the main branch
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build-and-push:
-#     name: Deploy to Amazon ECS
-#     runs-on: ubuntu-latest
-#     environment: cicd
-#     permissions:
-#       id-token: write
-#       contents: read
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v2
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
-#       - name: Configure AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v4.1.0
-#         with:
-#           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-role
-#           role-session-name: markdowntailor-deploy
-#           aws-region: ${{ secrets.AWS_REGION }}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#       - name: Login to Amazon ECR
-#         id: login-ecr
-#         uses: aws-actions/amazon-ecr-login@v2
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
 
-#       - name: Build, tag, and push image to Amazon ECR
-#         id: build-image
-#         env:
-#           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#         run: |
-#           # Build a docker container and push it to ECR
-#           docker build -t $ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:latest .
-#           docker push $ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:latest
-#           echo "image=$ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:latest" >> $GITHUB_OUTPUT
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'pnpm'
 
-#       - name: Download task definition
-#         env:
-#           TASK_DEFINITION: ${{ secrets.TASK_DEFINITION }}
-#         run: |
-#           aws ecs describe-task-definition --task-definition $TASK_DEFINITION --query taskDefinition > task-definition.json
+      - name: Install dependencies
+        run: pnpm install
 
-#       - name: Fill in the new image ID in the Amazon ECS task definition
-#         id: task-def
-#         uses: aws-actions/amazon-ecs-render-task-definition@v1
-#         with:
-#           task-definition: task-definition.json
-#           container-name: ${{ secrets.CONTAINER_NAME }}
-#           image: ${{ steps.build-image.outputs.image }}
+      - name: Setup Pages
+        id: setup_pages
+        uses: actions/configure-pages@v5
 
-#       - name: Deploy Amazon ECS task definition
-#         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
-#         with:
-#           task-definition: ${{ steps.task-def.outputs.task-definition }}
-#           service: ${{ secrets.ECS_SERVICE }}
-#           cluster: ${{ secrets.ECS_CLUSTER }}
-#           wait-for-service-stability: true
+      - name: Restore cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            .next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+
+      - name: Build with Next.js
+        run: pnpm run build
+        env:
+          PAGES_BASE_PATH: ${{ steps.setup_pages.outputs.base_path }}
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
